2006-09-27  Sergei Gavrikov  <sg@sgs.gomel.by>

	* src/mmc_spi.c: (mmc_spi_disk_lookup): just fixed a missed
	semicolon.

2006-09-21  Jonathan Larmour  <jifl@eCosCentric.com>

	* Contribution of MMC/SPI package from eCosCentric. eCosCentric
	changes prior to contribution are included below for reference:

  2006-09-20  Jonathan Larmour  <jifl@eCosCentric.com>
  
  	* src/mmc_spi.c: DISK_FUNS, DISK_CHANNEL and DISK_CONTROLLER are now
  	implicitly static.
  	Update DISK_CHANNEL for new io/disk macro definition.
  
  2006-04-05  John Dallaway  <jld@ecoscentric.com>
  
  	* cdl/devs_disk_mmc.cdl: Add reference to package documentation.
  
  2006-03-17  Jonathan Larmour  <jifl@eCosCentric.com>
  
  	* src/mmc_spi.c (struct cyg_mmc_spi_disk_info_t): Store underlying
  	medium's read/write block length.
  	(mmc_spi_check_for_disk): Store underlying medium's
  	read/write block length.
  	(mmc_spi_disk_lookup): Report medium block size to disk layer.
  	(mmc_spi_disk_read): API now requires sector reads to be with length
  	of sectors not bytes.
  	(mmc_spi_disk_write): Ditto.
  
  2005-10-28  Jonathan Larmour  <jifl@eCosCentric.com>
  
  	* include/mmc_protocol.h: Move from src/ to here.
  	* src/mmc_spi.c: Reflect above move.
  
  2004-08-30  Bart Veer  <bartv@ecoscentric.com>
  
  	* src/mmc_spi.c (mmc_spi_write_disk_block): disable background
  	writes. Some MMC cards don't seem to implement this correctly so
  	if you are trying to talking to another SPI device the MMC card
  	still replies.
  
  2004-07-03  Bart Veer  <bartv@ecoscentric.com>
  
  	* src/mmc_spi.c (MMC_SPI_READ_DATA_TOKEN_RETRIES): increase the
  	number of iterations. With some cards a read can occasionally take
  	50* longer than normal.
  
  2004-07-01  Bart Veer  <bartv@ecoscentric.com>
  
  	* src/mmc_spi.c: reorganize write code, to work around problems
  	with some cards.
  
  2004-06-29  Bart Veer  <bartv@ecoscentric.com>
  
  	* src/mmc_spi.c: some cards require an extra delay during a mount